# sparkjar-shared

./: .gitignore  README.md  pyproject.toml  requirements.txt  scripts_README.md  setup.py
.github/workflows/: publish.yml
sparkjar_shared/: __init__.py  auth.py
sparkjar_shared/auth/: __init__.py  jwt_utils.py
sparkjar_shared/config/: __init__.py  cli.py  config.py  config_validator.py  embedding_config.py  profiles.py  shared_settings.py  startup_validator.py
sparkjar_shared/crews/: __init__.py  base_handler.py  crew_logger.py
sparkjar_shared/database/: __init__.py  connection.py  mcp_registry_models.py  memory_integrity.py  models.py  models_memory_tables.py
sparkjar_shared/docs/: MULTI_TENANT_ARCHITECTURE.md
sparkjar_shared/models/: __init__.py  base.py  memory_models.py
sparkjar_shared/schemas/: __init__.py  crew_schemas.py  memory_schemas.py  thinking_schemas.py
sparkjar_shared/services/: chroma_service.py  object_embeddings_service.py  schema_validator.py
sparkjar_shared/tools/: HIERARCHICAL_MEMORY_TOOL_GUIDE.md  README.md  README_SJ_TOOLS.md  __init__.py  google_drive_download_tool_README.md  sync_db_storage_tool_README.md
sparkjar_shared/utils/: README.md  __init__.py  chroma_client.py  crew_config_admin.py  crew_logger.py  embedding_client.py  enhanced_crew_logger.py  google_search.py  logging_config.py  logging_usage_example.py  ocr_client.py  ocr_example.py  retry_utils.py  secret_manager.py  simple_crew_logger.py  standalone_logger.py  vector_search.py
tools/analysis/: comprehensive_workaround_check.py  job_analyzer.py
(+78 files in other folders)
